fix fileList custom spacing

--- a/packages/chonky/example/style.css
+++ b/packages/chonky/example/style.css
@@ -1,9 +1,10 @@
-.chonky-listFileEntryIcon {
-    margin-left: 20px;
-}
 
 .chonky-chonkyRoot {
-    font-family: "Helvetica Neue" !important;
+    font-family: "Helvetica Neue", sans-serif !important;
+}
+
+.chonky-listFileEntryIcon {
+    margin-left: 20px;
 }
 
 .chonky-listFileEntry {
@@ -13,6 +14,6 @@
 }
 
 .chonky-listFileEntryFocusIndicator {
-    box-shadow: rgb(71 62 125) 0px 0px 0px 1px inset !important;
+    box-shadow: rgb(71 62 125) 0 0 0 1px inset !important;
     background-color: #F7F8FE !important;
 }
